syntax = "proto3";

package towns;

service RandomRoomJoinerService {
    rpc JoinRandomRoom(JoinRandomRoomRequest) returns(JoinRandomRoomResponse) {}
}

message JoinRandomRoomRequest {
    oneof auth_token_checker {
        string auth_token = 1;
    }
}

message JoinRandomRoomResponse {
    oneof room_id_checker {
        string room_id = 1;
    }
}
